# HandSelf

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/demo/: conf.json
app/src/main/assets/infer/: model
app/src/main/jni/: CMakeLists.txt  mynahai.cc
app/src/main/jni/include/: paddle_use_kernels.h  paddle_use_ops.h
app/src/main/res/drawable/: btn_scan.xml  selector_text.xml  sex_selected_bg.xml  shape_add_min.xml  shape_add_min1.xml  shape_btn_red.xml  shape_button.xml  shape_button_add.xml  shape_circle.xml  shape_circle_press.xml  shape_dialog.xml  shape_goods_num.xml  shape_input_goods_code.xml  shape_linshi.xml  shape_login.xml  shape_login_btn.xml  shape_user_head.xml  textview_border.xml
app/src/main/res/layout/: activity_add_pandian.xml  activity_blue.xml  activity_goods.xml  activity_jiesuan_succ.xml  activity_jiesuan_type.xml  activity_login.xml  activity_main.xml  activity_more_list.xml  activity_order_detail.xml  activity_order_list.xml  activity_pandian.xml  activity_preference_settings.xml  activity_scan_pay.xml  activity_temp_order.xml  activity_user_center.xml  device_list.xml  dialog_input.xml  dialog_pd.xml  goods_count_activity.xml  include_head.xml  include_order_top.xml  item_getmoneying.xml  item_goods.xml  item_pay_type.xml  (+8 more)
gradle/wrapper/: gradle-wrapper.properties
immersion/: build.gradle
mlkit-barcode-scanning/: build.gradle
mlkit-camera-core/: build.gradle
tkcore/: build.gradle  proguard-rules.pro
tkcore/src/main/: AndroidManifest.xml
(+231 files in other folders)
